--- a/config/config.json
+++ b/config/config.json
@@ -1,11 +1,11 @@
 {
-  "default_zip_dir": "",
+  "default_zip_dir": "D:\\test",
   "configs": [
     {
       "env_name": "测试jdk环境",
-      "env_code": "jvm",
-      "env_source_path": "C:\\env\\sdk\\jdk\\openjdk21",
-      "env_target_path": "D:\\test\\env\\jdk",
+      "env_code": "jdk",
+      "env_source_path": "D:\\test\\source",
+      "env_target_path": "D:\\test\\source",
       "use_default": true,
       "del_source": false,
       "env_source_check": [
@@ -17,36 +17,14 @@
       ],
       "env_config" : [
         {
-          "key" : "TEST_JAVA_HOME",
-          "value" : "$bin3",
+          "key" : "TEST_JAVA_HOME_BIN",
+          "value" : "$bin",
           "cover" : true,
           "append_path" : false
-        }
-      ]
-    },
-    {
-      "env_name": "测试maven环境",
-      "env_code": "maven",
-      "env_source_path": "D:\\dev_tools\\apache-maven-3.9.8",
-      "env_target_path": "D:\\test\\env\\maven",
-      "use_default": true,
-      "del_source": false,
-      "env_source_check": [
-        {
-          "name" : "bin",
-          "type" : "dir",
-          "path" : "$bin"
         },
         {
-          "name" : "settings",
-          "type" : "file",
-          "path" : "$conf\\settings.xml"
-        }
-      ],
-      "env_config" : [
-        {
-          "key" : "TEST_MAVEN_HOME",
-          "value" : "$bin3",
+          "key" : "TEST_JAVA_HOME",
+          "value" : "$",
           "cover" : true,
           "append_path" : false
         }
