--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,5 @@
 {
-  "default_zip_dir": "D:\\test\\env",
+  "default_zip_dir": "D:\\test",
   "configs": [
     {
       "env_name": "jdk环境",
@@ -13,13 +13,22 @@
           "name" : "bin",
           "type" : "dir",
           "path" : "$bin"
+        },{
+          "name" : "bin",
+          "type" : "dir",
+          "path" : "$bin"
+        },
+        {
+          "name" : "bin",
+          "type" : "dir",
+          "path" : "$bin"
         }
       ],
       "env_config" : [
         {
-          "key" : "JAVA_HOME",
+          "key" : "TEST_JAVA_HOME",
           "value" : "$",
-          "cover" : false,
+          "cover" : true,
           "suffix_path" : ["bin"],
           "append_path" : true
         }
