--- a/config/config.json
+++ b/config/config.json
@@ -84,6 +84,31 @@
           "append_path" : false
         }
       ]
+    },
+
+    {
+      "env_name": "ffmpeg环境",
+      "env_code": "ffmpeg",
+      "env_source_path": "./source",
+      "env_target_path": "./source",
+      "use_default": true,
+      "del_source": false,
+      "env_source_check": [
+        {
+          "name" : "bin",
+          "type" : "dir",
+          "path" : "$bin"
+        }
+      ],
+      "env_config" : [
+        {
+          "key" : "FFMPEG_HOME",
+          "value" : "$",
+          "cover" : false,
+          "suffix_path" : ["bin"],
+          "append_path" : false
+        }
+      ]
     }
   ]
 }
